# improved-templ8.py

./: .gitignore  LICENSE  MANIFEST.in  basehtml  blessing.py  blogbase  d8ty  d8y  programstate.py  readme.md  rpl8cmnt  setup.cfg  templ8.py
commands/: divine.py  genesis.py  radio.py
src/templ8/: blessing.py  divine.py  genesis.py  help_args.py  main.py  neo.py  programstate.py  radio.py
src/templ8/help/: core_renaming.txt  custombase.txt  divine.txt  genesis.txt  help.txt  neo.txt  pandoc.txt  radio.txt  repl8ce.txt
testblog/: basehtml  repl8ce
