[metadata]
name = templ84
version = 0.0.169
author = Katie Ampersand
author_email = katie-and@ampersandia.net
description = A static website generator with textile and markdown support.
long_description = file: readme.md
long_description_content_type = text/markdown
include_package_data = True

[options.entry_points]
console_scripts =
    templ9=templ8.main:main
	

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src