[metadata]
name = templ8
version = 0.1.0b5
author = Katie Ampersand
author_email = katie-and@ampersandia.net
description = A static website generator with textile and markdown support.
long_description = file: readme.md
long_description_content_type = text/markdown
include_package_data = True
install_requires =
    textile
    pypandoc

[options.entry_points]
console_scripts =
    templ8=templ8.main:main
	

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src